adding nested object to JSON and display it in second activity after clicked on movie

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Filmy</string>
+    <string name="textview">TextView</string>
+    <string name="description">Description:</string>
+    <string name="actors">Actors:</string>
+    <string name="release_date">Release Date</string>
+    <string name="title">Title</string>
+    <string name="duration">duration</string>
+    <string name="category">Category</string>
+    <string name="oceny">oceny</string>
+    <string name="direction">direction</string>
 </resources>
