--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="category">Category</string>
     <string name="oceny">oceny</string>
     <string name="direction">direction</string>
+    <string name="posterImage">posterImage</string>
 </resources>
