--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">Filmy</string>
     <string name="textview">TextView</string>
-    <string name="description">Description:</string>
-    <string name="actors">Actors:</string>
-    <string name="release_date">Release Date</string>
-    <string name="title">Title</string>
-    <string name="duration">duration</string>
-    <string name="category">Category</string>
+    <string name="description">Opis:</string>
+    <string name="actors">Aktorzy:</string>
+    <string name="release_date">Data publikacji</string>
+    <string name="title">Tytuł</string>
+    <string name="duration">Czas trwania</string>
+    <string name="category">Kategoria</string>
     <string name="oceny">oceny</string>
-    <string name="direction">direction</string>
-    <string name="posterImage">posterImage</string>
+    <string name="direction">reżyseria</string>
+    <string name="posterImage">plakat</string>
 </resources>
